# sample_factory_first_attempt

./: .python-version  main.py  pyproject.toml
train_dir/default_experiment/: config.json  git.diff  sf_log.txt
train_dir/default_experiment/.summary/0/: events.out.tfevents.1719516833.Kirthikas-MacBook-Pro.local
